Resolved flickerx issue

--- a/src/styles/pages/home/_how.scss
+++ b/src/styles/pages/home/_how.scss
@@ -11,5 +11,23 @@
     padding: 3.3rem;
 
     /**************************************Card**************************************/
+    svg {
+      g {
+        circle + path {
+          fill: $primary;
+          cursor: pointer;
+        }
+        &:hover {
+          // fill
+          circle {
+            fill: $primary;
+          }
+          path {
+            fill: $background;
+          }
+        }
+      }
+    
+    }
   }
 }
